Add colleration and yarp to project

--- a/src/YAMI.Gateway/YAMI.Gateway.csproj
+++ b/src/YAMI.Gateway/YAMI.Gateway.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\shared\YAMI.Common\YAMI.Common.csproj" />
+  </ItemGroup>
+
 </Project>
