--- a/src/YAMI.Buyer/YAMI.Buyer.csproj
+++ b/src/YAMI.Buyer/YAMI.Buyer.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\shared\YAMI.Common\YAMI.Common.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
