Super uber dummy implementation of send and receive messages from Rabbit MQ

--- a/src/YAMI.Notifier/YAMI.Notifier.csproj
+++ b/src/YAMI.Notifier/YAMI.Notifier.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\shared\YAMI.Common\YAMI.Common.csproj" />
+  </ItemGroup>
+
 </Project>
