--- a/src/YAMI.Notifier/Properties/launchSettings.json
+++ b/src/YAMI.Notifier/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "YAMI.Notifier": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
