--- a/src/shared/YAMI.Common/YAMI.Common.csproj
+++ b/src/shared/YAMI.Common/YAMI.Common.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
+    <PackageReference Include="DotPulsar" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
