--- a/src/shared/YAMI.Common/YAMI.Common.csproj
+++ b/src/shared/YAMI.Common/YAMI.Common.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotPulsar" Version="2.3.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
