--- a/src/YAMI.Buyer/appsettings.Development.json
+++ b/src/YAMI.Buyer/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "Logging": {
+    "Seq": "http://localhost:5341",
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
